ags (3.3.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSpectrometer plot
	* fixed ags-fx-analyse missing clear of input data
	* added missing gtk-doc of ags-fx recalls
	* removed static storage class from ags-fx global strings

ags (3.3.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed make ags-integration-unit-test wrong LDADD flags

ags (3.3.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV because port-value-length mismatch of ags-fx-analyse

ags (3.3.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* further improved MIDI playback, set AgsAudioSignal length as doing ags_sound_resource_read_audio_signal()

ags (3.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing includes
	* fixed AgsSyncsynth and AgsFmSyncsynth missing requested frames
	* fixed MIDI playback
	* improved ags_functional_osc_server_test.c to run non-blocking OSC client

ags (3.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed infinite loop in ags/X/ags_line_member_editor_callbacks.c
	* fixed pointer corruption because of wrong cast to get stream mutex

ags (3.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock related to ags-fx-ladspa and ags-fx-lv2
	* fixed missing return value of ags_fx_factory_create()
	* fixed reverse mapping of DSSI and LV2 plugins

ags (3.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to ags_fx_lv2_channel_load_plugin() in ags_fx_factory.c
	* fixed restore from AgsSimpleFile
	* fixed g_list_free_full() while transfer none
	* minor bug-fixes

ags (3.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented staging program of AgsAudioLoop, AgsAudioThread and AgsChannelThread
	* implemented ags_fx_factory.[ch]
	* implemented AgsFxPlaybackAudio, AgsFxPlaybackAudioProcessor, AgsFxPlaybackChannel,