@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.3.9" date="2020-05-29">
+      <description>
+	<p>Fixed AgsAudiorec capture.</p>
+      </description>
+    </release>
+
     <release version="3.3.8" date="2020-05-27">
       <description>
 	<p>Fixed AgsSpectrometer visualization.</p>
