@@ -1,3 +1,8 @@
+ags (3.3.9)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed AgsAudiorec's ags-fx-playback memory corruption
+
 ags (3.3.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
